<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorStrongBlue">

    <ImageView
        android:id="@+id/games_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/games"
        android:layout_centerInParent="true"
        android:layout_above="@id/txt_vwText"
        android:layout_margin="20sp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/txt_vwText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_above="@id/inputForm"
        android:layout_marginBottom="40sp"/>

    <RelativeLayout
        android:id="@+id/inputForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="40dp">

        <EditText
            android:id="@+id/edtxt_user"
            android:layout_width="match_parent"
            android:layout_height="24sp"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="14sp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:background="@color/colorLightGray"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtxt_password"
            android:layout_width="match_parent"
            android:layout_marginVertical="40dp"
            android:layout_height="24sp"
            android:background="@color/colorLightGray"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:layout_below="@id/edtxt_user"
            android:autofillHints="" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputForm"
        android:layout_marginHorizontal="40dp">

        <Button
            android:id="@+id/btn_clearForm"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@color/colorWhite"
            android:text="@string/clear"
            android:textSize="12sp"
            android:textColor="@color/colorDark"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@color/colorDark"
            android:text="@string/login"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:layout_weight="19"
            />

    </LinearLayout>

</RelativeLayout>